--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aa3e9cd0",
+   "id": "b9738c61",
    "metadata": {},
    "source": [
-    "Atooms: postprocessing\n",
-    "======================\n",
+    "Postprocessing with atooms\n",
+    "==========================\n",
     "\n",
-    ":hidden: index\n",
+    "index\n",
     "\n",
     "In this tutorial, we are going to show how to perform standard analysis\n",
     "of molecular dynamics trajectories using the `atooms` package and its\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08342144",
+   "id": "3b51aa0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20241292",
+   "id": "9a0ea8ab",
    "metadata": {},
    "source": [
     "We then import the `postprocessing` package and the trajectory class\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a517a3f8",
+   "id": "586fc6b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f18bfe1",
+   "id": "8045c6c4",
    "metadata": {},
    "source": [
     "We consider a sample trajectory, which can be download from the\n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cbc27bf",
+   "id": "8fe56667",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e007d614",
+   "id": "f4260c0a",
    "metadata": {},
    "source": [
     "### Handling a trajectory\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "431faf26",
+   "id": "29a23f2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "459ad550",
+   "id": "38862aea",
    "metadata": {},
    "source": [
     "The trajectory is a list-like object, in the sense that it can be\n",
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81c4ddf9",
+   "id": "b39c986a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb5beed",
+   "id": "37c9da90",
    "metadata": {},
    "source": [
     "To know how many frames we have\n"
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07a469ee",
+   "id": "6fe04a89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2970114f",
+   "id": "228e414e",
    "metadata": {},
    "source": [
     "To clarify: a slice is a list of frames, not a trajectory\n"
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee0e170d",
+   "id": "30edd80a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "340f3f23",
+   "id": "4857ec1d",
    "metadata": {},
    "source": [
     "It is actually possible to define a slice of a trajectory **as a\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "363cf7b8",
+   "id": "d48f712e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62665666",
+   "id": "5c712f33",
    "metadata": {},
    "source": [
     "Analysis of the trajectory\n",
@@ -209,7 +209,7 @@
     "    $$g(r)=\\frac{1}{N\\rho}\\left\\langle\\sum_i^{N}\\sum_{i\\neq j}\\delta(r-|\\mathbf{r}_i-\\mathbf{r}_j|)\\right\\rangle$$.\n",
     "\n",
     "    Notice that the average number of particles with a distance $R$,\n",
-    "    i.e. the average ****coordination number**** $n(R)$, can be computed\n",
+    "    i.e. the average **coordination number** $n(R)$, can be computed\n",
     "    from the radial distribution function via integration in spherical\n",
     "    coordinates (for 3D systems)\n",
     "\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbb66629",
+   "id": "7380378b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c591d2fc",
+   "id": "d1c5b0a2",
    "metadata": {},
    "source": [
     "Once the calculation is performed, the radial distribution object `gr`\n",
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67c71d93",
+   "id": "2d152f9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f343e654",
+   "id": "3a51a7fa",
    "metadata": {},
    "source": [
     "![](gr.png)\n",
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb606089",
+   "id": "9c1f1fe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5609897d",
+   "id": "8c39d936",
    "metadata": {},
    "source": [
     "In this case, the result contains a dictionary `gr.partial`:\n"
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85d7b4c3",
+   "id": "32922e82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c14bcf60",
+   "id": "f0998089",
    "metadata": {},
    "source": [
     "We can treat the result as any normal dictionary:\n"
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ddca676",
+   "id": "9ff0d1a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "190bc830",
+   "id": "53e10478",
    "metadata": {},
    "source": [
     "![](gr_ab.png)\n",
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1f7ac8",
+   "id": "eb93d079",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8742532c",
+   "id": "0554ae98",
    "metadata": {},
    "source": [
     "![](gr_slice.png)\n",
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69856362",
+   "id": "0c0d2c25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d26ca52",
+   "id": "1bf463da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39fa45eb",
+   "id": "9a29ceea",
    "metadata": {},
    "source": [
     "![](msd.png)\n",
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b43b6308",
+   "id": "27ac4584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fa50f6c",
+   "id": "825c4ad0",
    "metadata": {},
    "source": [
     "![](msd_ab.png)\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37abe17f",
+   "id": "d3c1bef5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1db7170e",
+   "id": "fbc0c11b",
    "metadata": {},
    "source": [
     "To get some info on the parameters passed to compute the ISF, have a\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b5223f3",
+   "id": "e8642b15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04f8a26b",
+   "id": "f783980c",
    "metadata": {},
    "source": [
     "![](isf.png)\n",
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae3efdd8",
+   "id": "cdde327b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dddb333d",
+   "id": "9492c264",
    "metadata": {},
    "source": [
     "-   \\`BondAngleDistribution\\`: bond angle distribution\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bab8fdf8",
+   "id": "56d1df51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ff0b4e6",
+   "id": "50811538",
    "metadata": {},
    "outputs": [],
    "source": [
