--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6b386856",
+   "id": "b559e541",
    "metadata": {},
    "source": [
     "Postprocessing with atooms\n",
@@ -18,55 +18,36 @@
     "Setup\n",
     "-----\n",
     "\n",
-    "We start by loading common libraries for plotting and path handling\n"
+    "We start with a few imports. We will read a trajectory file in XYZ\n",
+    "format, so we also load the `TrajectoryXYZ` class from `atooms`.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbea00bf",
+   "id": "38ae782d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as pl\n",
-    "import sys"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "32fd35de",
-   "metadata": {},
-   "source": [
-    "We then import the `postprocessing` package and the trajectory class\n",
-    "from `atooms`. In this particular case, we will read a trajectory file\n",
-    "in XYZ format, so we load the `TrajectoryXYZ` class\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8bbe91f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import atooms.postprocessing as pp\n",
     "from atooms.trajectory import TrajectoryXYZ "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8e323399",
+   "id": "6404b7ac",
    "metadata": {},
    "source": [
-    "We consider a sample trajectory, which can be download from the\n",
-    "repository of the postprocessing package itself. Let\\'s store the path\n",
-    "to this file in a variable for later convenience\n"
+    "We consider a sample trajectory, which can be downloaded from the\n",
+    "package repository. Let\\'s store the path to this file in a variable for\n",
+    "later convenience\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7ff7e11",
+   "id": "acf23915",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43fa47c4",
+   "id": "225eed7a",
    "metadata": {},
    "source": [
     "### Handling a trajectory\n",
@@ -89,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3e15b90",
+   "id": "1a3498be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,29 +79,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68edb141",
+   "id": "6e9e1e06",
    "metadata": {},
    "source": [
     "The trajectory is a list-like object, in the sense that it can be\n",
-    "iterated up and sliced. Each frame of the trajectory contains a `System`\n",
-    "object, which is a full configration of the system at a given instant of\n",
-    "time during the simulation. Here we print the first, the 10th and the\n",
-    "last frame\n"
+    "iterated upon and sliced. Each frame of the trajectory contains a\n",
+    "`System` object, which is a snaphot of the system at a given instant\n",
+    "(\\\"frame\\\") during the simulation. We have a look at the last frame\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "462d69a5",
+   "id": "c3cc3c76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "th[0], th[10], th[-1]"
+    "print(th[-1])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b23f9dec",
+   "id": "46a70913",
    "metadata": {},
    "source": [
     "To know how many frames we have\n"
@@ -129,38 +109,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3824d4d",
+   "id": "c3cc34bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(th)"
+    "print(len(th))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f41ea824",
+   "id": "1f85a94e",
    "metadata": {},
    "source": [
-    "To clarify: a slice is a list of frames, not a trajectory\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6f46a29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "th[10: 12]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca0dc03a",
-   "metadata": {},
-   "source": [
-    "It is actually possible to define a slice of a trajectory **as a\n",
-    "trajectory** by using the `Sliced` class decorator, see below.\n",
+    "To clarify: a slice like `th[10: 12]` is a list of frames, not a\n",
+    "trajectory. It is possible to define a slice of a trajectory **as a\n",
+    "trajectory** instance by using the `Sliced` class decorator, see below.\n",
     "\n",
     "If the trajectory contains metadata, these can be retrieved directly:\n"
    ]
@@ -168,20 +131,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73394a71",
+   "id": "6d5f83fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pprint import pprint\n",
     "print(\"Timestep during the trajectory:\", th.timestep)\n",
-    "print(\"Steps corresponding to the 3rd frame:\", th.steps[2])\n",
+    "print(\"Steps after which the 3rd frame was stored:\", th.steps[2])\n",
     "print(\"Additional metadata:\")\n",
     "pprint(th.metadata)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "534fdac2",
+   "id": "2e05dd10",
    "metadata": {},
    "source": [
     "Analysis of the trajectory\n",
@@ -216,25 +179,26 @@
     "    $$n(R)=4\\pi \\rho\\int_0^R g(r)r^2 dr$$\n",
     "\n",
     "    In `postprocessing` the radial distribution function is a\n",
-    "    `Correlation` object that acts on a trajectory. In order to compute\n",
-    "    it, we simply construct the object, specifying some parameters, and\n",
-    "    then run the calculation with the `do()` method\n"
+    "    `Correlation` object that takes a trajectory as input. In order to\n",
+    "    compute the correlation function, we construct the object,\n",
+    "    specifying some parameters, and then run the calculation with the\n",
+    "    `compute()` method\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "788b480a",
+   "id": "cef8c617",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gr = pp.RadialDistributionFunction(th, norigins=5, dr=0.04)\n",
-    "gr.do()"
+    "gr = pp.RadialDistributionFunction(th, dr=0.02)\n",
+    "gr.compute()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "487319e5",
+   "id": "9f7f05bd",
    "metadata": {},
    "source": [
     "Once the calculation is performed, the radial distribution object `gr`\n",
@@ -252,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6582e34f",
+   "id": "e5d867d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,45 +227,69 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b72fe6b5",
+   "id": "11de7af3",
    "metadata": {},
    "source": [
     "![](gr.png)\n",
     "\n",
-    "As we can see, the function displays two narrow peaks around $r=1$ and a\n",
-    "broader peak further away. The presence of several peaks is due to the\n",
-    "fact that the system actually contains two types of particles, noted $A$\n",
-    "and $B$.\n",
-    "\n",
-    "We can compute separate distribution functions for the $A$ and $B$\n",
-    "particles and also the cross distribution funtion for the probability to\n",
-    "find a particle $B$ at distance $r$ from particle $A$ using the\n",
-    "`Partial` class:\n"
+    "You can show the results right away with the `show()` method, which\n",
+    "formats the labels automatically. The method returns a `matplotlib` axis\n",
+    "object for further customization.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dd0c19a",
+   "id": "d040d39a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gr = pp.Partial(pp.RadialDistributionFunction, species=['A', 'B'], trajectory=th, norigins=100)\n",
-    "gr.do() "
+    "gr.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "40fa0f2e",
+   "id": "e76d4e24",
    "metadata": {},
    "source": [
-    "In this case, the result contains a dictionary `gr.partial`:\n"
+    "As we can see, the correlation function displays two narrow peaks around\n",
+    "$r=1$ and a broader peak further away. The presence of several peaks is\n",
+    "due to the fact that the system actually contains two types of\n",
+    "particles, noted $A$ and $B$.\n",
+    "\n",
+    "We can compute separate distribution functions for the $A$ and $B$\n",
+    "particles and also the cross distribution funtion for the probability to\n",
+    "find a particle $B$ at distance $r$ from particle $A$ using the\n",
+    "`Partial` class.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89282550",
+   "id": "057e3034",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gr = pp.Partial(pp.RadialDistributionFunction, species=['A', 'B'], trajectory=th, dr=0.02)\n",
+    "gr.partial[('B', 'B')].dr = 0.05\n",
+    "gr.compute() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf76ceb4",
+   "metadata": {},
+   "source": [
+    "Note how we modified the bin width `dr` for the $B$-$B$ correlations to\n",
+    "compensate for the reduced statistics for the minority species.\n",
+    "\n",
+    "In this case, the result contains a dictionary `gr.partial`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d0564d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,16 +299,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d62aedc",
+   "id": "c801b0c4",
    "metadata": {},
    "source": [
-    "We can treat the result as any normal dictionary:\n"
+    "We plot all correlation functions\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04a53099",
+   "id": "cada94df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7666141",
+   "id": "e3a10a32",
    "metadata": {},
    "source": [
     "![](gr_ab.png)\n",
@@ -346,22 +334,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f219bfa",
+   "id": "7de9884a",
    "metadata": {},
    "outputs": [],
    "source": [
     "from atooms import trajectory\n",
-    "t =  trajectory.Sliced(th, slice(-1, len(th)))  # analyse only the last frame\n",
-    "gr = pp.RadialDistributionFunction(t, dr=0.04)\n",
-    "gr.do()\n",
+    "t =  trajectory.Sliced(th, slice(len(th)//2, len(th)))  # analyse only the 2nd half\n",
+    "gr = pp.RadialDistributionFunction(t, dr=0.02)\n",
+    "gr.compute()\n",
     "pl.plot(gr.grid, gr.value)\n",
     "pl.xlabel(\"r\")\n",
-    "pl.ylabel(\"g(r)\")  # notice that the g(r) is more noisy"
+    "pl.ylabel(\"g(r)\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a537ff49",
+   "id": "0c450c01",
    "metadata": {},
    "source": [
     "![](gr_slice.png)\n",
@@ -370,16 +358,14 @@
     "\n",
     "1.  Mean square displacement\n",
     "\n",
-    "    A very similar kind of anaysis can be performed on dynamical\n",
-    "    quantities, which quantify correlations in time.\n",
-    "\n",
-    "    The most elementary of such quantities is the mean squared\n",
-    "    displacement (MSD). This is defined as\n",
+    "    We can also compute dynamical correlation functions. The simplest of\n",
+    "    such quantities is the mean squared displacement (MSD). This is\n",
+    "    defined as\n",
     "\n",
     "    $$ \\delta r^2(t)= \\langle |\\mathbf{r}(t-t_0) - \\mathbf{r}(t_0)|^2\\rangle$$\n",
     "\n",
-    "    The average is normally perfomed over all the $N$ particles and over\n",
-    "    multiple values for the **origin** of time $t_0$.\n",
+    "    The average is usually performed over all the $N$ particles and over\n",
+    "    multiple time origins $t_0$.\n",
     "\n",
     "    The analysis process is now familiar. First we construct the msd\n",
     "    object and then perform the calculation with `do()`.\n"
@@ -388,29 +374,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46ef369a",
+   "id": "ef62479b",
    "metadata": {},
    "outputs": [],
    "source": [
     "msd = pp.MeanSquareDisplacement(th)\n",
-    "msd.do()"
+    "msd.compute()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e6876b4",
+   "id": "74895b3c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pl.loglog(msd.grid, msd.value, 'o')\n",
+    "pl.loglog(msd.grid, msd.value, '-o')\n",
     "pl.xlabel(\"t\")\n",
     "pl.ylabel(\"MSD(t)\");"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "57fd330d",
+   "id": "20801597",
    "metadata": {},
    "source": [
     "![](msd.png)\n",
@@ -422,21 +408,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc7200f2",
+   "id": "cb112de2",
    "metadata": {},
    "outputs": [],
    "source": [
     "msds = pp.Partial(pp.MeanSquareDisplacement, species=['A','B'], trajectory=th, norigins=100)\n",
-    "msds.do()\n",
-    "pl.loglog(msds.partial['A'].grid, msds.partial['A'].value, 'o')\n",
-    "pl.loglog(msds.partial['B'].grid, msds.partial['B'].value, 'o')\n",
+    "msds.compute()\n",
+    "pl.loglog(msds.partial['A'].grid, msds.partial['A'].value, '-o', label='A')\n",
+    "pl.loglog(msds.partial['B'].grid, msds.partial['B'].value, '-o', label='B')\n",
+    "pl.legend()\n",
     "pl.xlabel(\"t\")\n",
     "pl.ylabel(\"MSD(t)\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f3015422",
+   "id": "4dbed8b2",
    "metadata": {},
    "source": [
     "![](msd_ab.png)\n",
@@ -450,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a318d77",
+   "id": "5a077ba5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14ebcbf5",
+   "id": "39036064",
    "metadata": {},
    "source": [
     "To get some info on the parameters passed to compute the ISF, have a\n",
@@ -477,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e870cb37",
+   "id": "dbf96a51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5f7e83a",
+   "id": "78a87a84",
    "metadata": {},
    "source": [
     "![](isf.png)\n",
@@ -502,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf3dc749",
+   "id": "18ddb265",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "440e648e",
+   "id": "9c76c5fe",
    "metadata": {},
    "source": [
     "-   \\`BondAngleDistribution\\`: bond angle distribution\n",
@@ -556,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12fbccb8",
+   "id": "90c4393c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +559,6 @@
     "        self.phasespace = [\"pos\"]\n",
     "\n",
     "    def _compute(self):\n",
-    "        print(\"Computing new correlation\")\n",
     "        raw = defaultdict(list)\n",
     "        for i in range(len(self._pos)):\n",
     "            for x in self.grid: \n",
@@ -583,13 +569,104 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66700666",
+   "id": "b3c8695d",
    "metadata": {},
    "outputs": [],
    "source": [
     "nw = NewCorrelation(th, [0.0, 1.0])\n",
     "nw.compute()\n",
     "print(nw.value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6f6870f",
+   "metadata": {},
+   "source": [
+    "Storing results and analysis\n",
+    "----------------------------\n",
+    "\n",
+    "The correlation functions can be written to files, using the `write()`\n",
+    "method.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a0c3ad2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msd = pp.MeanSquareDisplacement(th)\n",
+    "msd.compute()\n",
+    "msd.write()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62e97ac2",
+   "metadata": {},
+   "source": [
+    "The output file path is interpolated using the variable\n",
+    "`core.pp_output_path`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38a981c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print({} gives {}'.format(pp.core.pp_output_path, msd._output_file))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44f3bb63",
+   "metadata": {},
+   "source": [
+    "To change the output file pattern just modify the string. You can use\n",
+    "any `Correlation` attribute enclosed in brackets to parameterize the\n",
+    "output.\n",
+    "\n",
+    "The output file is a simple columnar text file containing the grid and\n",
+    "values of the correlation function.\n",
+    "\n",
+    "Some correlation functions may implement some basic analysis as well\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc8064d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msd.analyze()\n",
+    "pprint(msd.analysis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9cb9b42",
+   "metadata": {},
+   "source": [
+    "If `analyze()` is called before `compute()`, the above dictionary will\n",
+    "be written in the output file as well.\n",
+    "\n",
+    "Finally, you can perform all the steps above (`compute`, `analyze`,\n",
+    "`write`) in one sweep like this\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96b880cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msd.do()"
    ]
   }
  ],
