--- a/docs/index.org
+++ b/docs/index.org
@@ -13,21 +13,14 @@ In this tutorial, we are going to show how to perform standard analysis of molec
 
 ** Setup
 
-We start by loading common libraries for plotting and path handling
+We start with a few imports. We will read a trajectory file in XYZ format, so we also load the =TrajectoryXYZ= class from =atooms=.
 #+begin_src python :results none
 import matplotlib.pyplot as pl
-import sys
-#+end_src
-
-We then import the =postprocessing= package and the trajectory class from =atooms=. In this particular case, we will read a trajectory file in XYZ format, so we load the =TrajectoryXYZ= class
-#+begin_src python
 import atooms.postprocessing as pp
 from atooms.trajectory import TrajectoryXYZ 
 #+end_src
 
-#+results:
-
-We consider a sample trajectory, which can be download from the repository of the postprocessing package itself. Let's store the path to this file in a variable for later convenience
+We consider a sample trajectory, which can be downloaded from the package repository. Let's store the path to this file in a variable for later convenience
 #+begin_src python
 from atooms.core.utils import download
 download('https://framagit.org/atooms/postprocessing/raw/master/data/kalj-small.xyz', "/tmp")
@@ -45,47 +38,42 @@ th = TrajectoryXYZ(path)
 
 #+results:
 
-The trajectory is a list-like object, in the sense that it can be iterated up and sliced. Each frame of the trajectory contains a =System= object, which is a full configration of the system at a given instant of time during the simulation. Here we print the first, the 10th and the last frame
+The trajectory is a list-like object, in the sense that it can be iterated upon and sliced. Each frame of the trajectory contains a =System= object, which is a snaphot of the system at a given instant ("frame") during the simulation. We have a look at the last frame
 #+begin_src python
-th[0], th[10], th[-1]
+print(th[-1])
 #+end_src
 
 #+results:
-: (<atooms.system.system.System object at 0x7f2b75818dc0>, <atooms.system.system.System object at 0x7f2b75825790>, <atooms.system.system.System object at 0x7f2b75775160>)
+: system composed by N=150 particles
+: with chemical composition C={'A': 120, 'B': 30}
+: with chemical concentration x={'A': 0.8, 'B': 0.2}
+: enclosed in a cubic box at number density rho=1.200000
 
 To know how many frames we have
 #+begin_src python
-len(th)
+print(len(th))
 #+end_src
 
 #+results:
 : 101
 
-To clarify: a slice is a list of frames, not a trajectory
-#+begin_src python
-th[10: 12]
-#+end_src
-
-#+results:
-: [<atooms.system.system.System object at 0x7f2b75813e50>, <atooms.system.system.System object at 0x7f2b75820850>]
-
 #+attr_rst: :directive note
 #+begin_quote
-It is actually possible to define a slice of a trajectory *as a trajectory* by using the =Sliced= class decorator, see below.
+To clarify: a slice like =th[10: 12]= is a list of frames, not a trajectory. It is possible to define a slice of a trajectory *as a trajectory* instance by using the =Sliced= class decorator, see below.
 #+end_quote
 
 If the trajectory contains metadata, these can be retrieved directly:
 #+begin_src python
 from pprint import pprint
 print("Timestep during the trajectory:", th.timestep)
-print("Steps corresponding to the 3rd frame:", th.steps[2])
+print("Steps after which the 3rd frame was stored:", th.steps[2])
 print("Additional metadata:")
 pprint(th.metadata)
 #+end_src
 
 #+results:
 : Timestep during the trajectory: 0.001
-: Steps corresponding to the 3rd frame: 2000
+: Steps after which the 3rd frame was stored: 2000
 : Additional metadata:
 : {'cell': [5.0, 5.0, 5.0],
 :  'columns': ['name', 'pos'],
@@ -114,10 +102,10 @@ Notice that the average number of particles with a distance $R$, i.e. the averag
 
 $$n(R)=4\pi \rho\int_0^R g(r)r^2 dr$$
 
-In =postprocessing= the radial distribution function is a =Correlation= object that acts on a trajectory. In order to compute it, we simply construct the object, specifying some parameters, and then run the calculation with the =do()= method
+In =postprocessing= the radial distribution function is a =Correlation= object that takes a trajectory as input. In order to compute the correlation function, we construct the object, specifying some parameters, and then run the calculation with the =compute()= method
 #+begin_src python
-gr = pp.RadialDistributionFunction(th, norigins=5, dr=0.04)
-gr.do()
+gr = pp.RadialDistributionFunction(th, dr=0.02)
+gr.compute()
 #+end_src
 
 #+results:
@@ -136,29 +124,37 @@ pl.ylabel("g(r)")
 #+results:
 [[file:gr.png]]
 
-As we can see, the function displays two narrow peaks around $r=1$ and a broader peak further away. The presence of several peaks is due to the fact that the system actually contains two types of particles, noted $A$ and $B$. 
+You can show the results right away with the =show()= method, which formats the labels automatically. The method returns a =matplotlib= axis object for further customization.
+#+begin_src python :prologue "pl.clf()"
+gr.show()
+#+end_src
 
-We can compute separate distribution functions for the $A$ and $B$ particles and also the cross distribution funtion for the probability to find a particle $B$ at distance $r$ from particle $A$ using the =Partial= class:
+As we can see, the correlation function displays two narrow peaks around $r=1$ and a broader peak further away. The presence of several peaks is due to the fact that the system actually contains two types of particles, noted $A$ and $B$. 
+
+We can compute separate distribution functions for the $A$ and $B$ particles and also the cross distribution funtion for the probability to find a particle $B$ at distance $r$ from particle $A$ using the =Partial= class.
 #+begin_src python
-gr = pp.Partial(pp.RadialDistributionFunction, species=['A', 'B'], trajectory=th, norigins=100)
-gr.do() 
+gr = pp.Partial(pp.RadialDistributionFunction, species=['A', 'B'], trajectory=th, dr=0.02)
+gr.partial[('B', 'B')].dr = 0.05
+gr.compute() 
 #+end_src
 
 #+results:
 
-In this case, the result contains a dictionary =gr.partial=:
+Note how we modified the bin width =dr= for the $B$-$B$ correlations to compensate for the reduced statistics for the minority species.
+
+In this case, the result contains a dictionary =gr.partial=
 #+begin_src python
 from pprint import pprint
 pprint(gr.partial)
 #+end_src
 
 #+results:
-: {('A', 'A'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f7cbce85af0>,
-:  ('A', 'B'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f7cbcea0f10>,
-:  ('B', 'A'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f7cbcea08b0>,
-:  ('B', 'B'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f7cbcea0460>}
+: {('A', 'A'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f8303c308b0>,
+:  ('A', 'B'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f8303ce6c70>,
+:  ('B', 'A'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f8303c30940>,
+:  ('B', 'B'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f8303c30a90>}
 
-We can treat the result as any normal dictionary: 
+We plot all correlation functions
 #+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="gr_ab.png"
 for key,g in gr.partial.items(): 
     pl.plot(g.grid, g.value, label=str("".join(key)))
@@ -173,12 +169,12 @@ pl.ylabel(r"$g_{\alpha\beta}(r)$")
 Sometimes, it is useful to analyse only sections of a trajectory. To this purpose, one can slice the trajectory using =atooms= and analyse individual frames or subsets of frames. 
 #+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="gr_slice.png"
 from atooms import trajectory
-t =  trajectory.Sliced(th, slice(-1, len(th)))  # analyse only the last frame
-gr = pp.RadialDistributionFunction(t, dr=0.04)
-gr.do()
+t =  trajectory.Sliced(th, slice(len(th)//2, len(th)))  # analyse only the 2nd half
+gr = pp.RadialDistributionFunction(t, dr=0.02)
+gr.compute()
 pl.plot(gr.grid, gr.value)
 pl.xlabel("r")
-pl.ylabel("g(r)")  # notice that the g(r) is more noisy
+pl.ylabel("g(r)")
 #+end_src
 
 #+results:
@@ -188,24 +184,22 @@ pl.ylabel("g(r)")  # notice that the g(r) is more noisy
 
 **** Mean square displacement
 
-A very similar kind of anaysis can be performed on dynamical quantities, which quantify correlations in time.
-
-The most elementary of such quantities is the mean squared displacement (MSD). This is defined as
+We can also compute dynamical correlation functions. The simplest of such quantities is the mean squared displacement (MSD). This is defined as
 
 $$ \delta r^2(t)= \langle |\mathbf{r}(t-t_0) - \mathbf{r}(t_0)|^2\rangle$$
 
-The average is normally perfomed over all the $N$ particles and over multiple values for the *origin* of time $t_0$.
+The average is usually performed over all the $N$ particles and over multiple time origins $t_0$.
 
 The analysis process is now familiar. First we construct the msd object and then perform the calculation with =do()=.
 #+begin_src python
 msd = pp.MeanSquareDisplacement(th)
-msd.do()
+msd.compute()
 #+end_src
 
 #+results:
 
 #+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="msd.png"
-pl.loglog(msd.grid, msd.value, 'o')
+pl.loglog(msd.grid, msd.value, '-o')
 pl.xlabel("t")
 pl.ylabel("MSD(t)");
 #+end_src
@@ -216,9 +210,10 @@ pl.ylabel("MSD(t)");
 Again, we can compute partial mean square displacements using the =Partial= class
 #+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="msd_ab.png"
 msds = pp.Partial(pp.MeanSquareDisplacement, species=['A','B'], trajectory=th, norigins=100)
-msds.do()
-pl.loglog(msds.partial['A'].grid, msds.partial['A'].value, 'o')
-pl.loglog(msds.partial['B'].grid, msds.partial['B'].value, 'o')
+msds.compute()
+pl.loglog(msds.partial['A'].grid, msds.partial['A'].value, '-o', label='A')
+pl.loglog(msds.partial['B'].grid, msds.partial['B'].value, '-o', label='B')
+pl.legend()
 pl.xlabel("t")
 pl.ylabel("MSD(t)")
 #+end_src
@@ -285,6 +280,7 @@ for cls in inspect.getmembers(pp, inspect.isclass):
 Some of them have multiple implementations (ex. =Fast= and =Legacy=), which are picked at runtime depending on your platform. The fastest implementation will be automatically picked up, if possible.
 
 ** Writing your own correlation function
+
 We can extend the correlation class to compute additional correlation functions. The particle coordinates are loaded into the =_pos= instance variable as a list of numpy arrays. Each numpy array is a =(ndim, npart)= representation of the full particles' coordinates in a given frame of the trajectory. This is a gist of a new correlation class.
 #+begin_src python
 from collections import defaultdict
@@ -299,7 +295,6 @@ class NewCorrelation(pp.correlation.Correlation):
         self.phasespace = ["pos"]
 
     def _compute(self):
-        print("Computing new correlation")
         raw = defaultdict(list)
         for i in range(len(self._pos)):
             for x in self.grid: 
@@ -316,5 +311,44 @@ print(nw.value)
 #+end_src
 
 #+results:
-: Computing new correlation
 : [0.0, 0.0]
+
+** Storing results and analysis
+
+The correlation functions can be written to files, using the =write()= method. 
+#+begin_src python
+msd = pp.MeanSquareDisplacement(th)
+msd.compute()
+msd.write()
+#+end_src
+
+The output file path is interpolated using the variable =core.pp_output_path=
+#+begin_src python
+print({} gives {}'.format(pp.core.pp_output_path, msd._output_file))
+#+end_src
+
+#+results:
+: {trajectory.filename}.pp.{symbol}.{tag} leads to /tmp/kalj-small.xyz.pp.msd
+
+To change the output file pattern just modify the string. You can use any =Correlation= attribute enclosed in brackets to parameterize the output.
+
+The output file is a simple columnar text file containing the grid and values of the correlation function.
+
+Some correlation functions may implement some basic analysis as well
+#+begin_src python
+msd.analyze()
+pprint(msd.analysis)
+#+end_src
+
+#+results:
+: {'diffusion coefficient D': 0.004481283121206189,
+:  'diffusive time tau_D': 30.841529039944426}
+
+If =analyze()= is called before =compute()=, the above dictionary will be written in the output file as well.
+
+Finally, you can perform all the steps above (=compute=, =analyze=, =write=) in one sweep like this
+#+begin_src python
+msd.do()
+#+end_src
+
+If the calculation has been written to disk already and the trajectory file has not changed since, =do(update=True)= will load the correlation function, without recalcuting everything.
